# webserver

src/: CMakeLists.txt  LICENSE  main.cpp
src/server/data/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  TestHttpResponse.cpp  TestHttpResponse.h  json.cpp  types.h
src/server/handler/: BasicEndpointHandler.cpp  BasicEndpointHandler.h  Server.cpp  Server.h
src/session/: HttpSession.cpp  HttpSession.h  HttpSessionException.cpp  HttpSessionException.h  SessionManager.cpp  SessionManager.h
src/utils/configuration/: ConfigReader.cpp  ConfigReader.h
src/utils/request/: requestTypeStr.cpp  requestTypesStr.h
src/utils/ssl/: CTX_util.h
tcpSocketTest/: CMakeLists.txt  main.cpp
tcpSocketTest/server/data/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
tcpSocketTest/server/handler/: EndpointHandler.h  Server.h
tcpSocketTest/session/: HttpSession.cpp  HttpSession.h  SessionManager.cpp  SessionManager.h
tcpSocketTest/utils/configuration/: ConfigReader.cpp  ConfigReader.h
tcpSocketTest/utils/path/: pathUtil.h
tcpSocketTest/utils/ssl/: CTX_util.h
tcpSocketTest/utils/toml/: toml.cpp
